--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,89 @@
+asttokens==3.0.0
+attrs==25.3.0
+backcall==0.2.0
+beautifulsoup4==4.13.4
+bleach==6.2.0
+blinker==1.9.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+coloredlogs==15.0.1
+decorator==5.2.1
+defusedxml==0.7.1
+docopt==0.6.2
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.18.0
 Flask==3.1.1
-numpy==2.3.1
-opencv_python==4.11.0.86
-opencv_python_headless==4.11.0.86
-Pillow==11.3.0
+flatbuffers==25.2.10
+fsspec==2025.5.1
+gunicorn==23.0.0
+humanfriendly==10.0
+idna==3.10
+imageio==2.37.0
+ipython==8.12.3
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyterlab_pygments==0.3.0
+lazy_loader==0.4
+llvmlite==0.44.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mistune==3.1.3
+mpmath==1.3.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+networkx==3.5
+numba==0.61.2
+numpy==1.26.4
+onnxruntime==1.22.1
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+packaging==25.0
+pandocfilters==1.5.1
+parso==0.8.4
+pickleshare==0.7.5
+pillow==11.3.0
+pipreqs==0.5.0
+platformdirs==4.3.8
+pooch==1.8.2
+prompt_toolkit==3.0.51
+protobuf==6.31.1
+pure_eval==0.2.3
+Pygments==2.19.2
+PyMatting==1.1.14
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pywin32==311
+pyzmq==27.0.0
+referencing==0.36.2
 rembg==2.0.59
+requests==2.32.4
+rpds-py==0.26.0
+scikit-image==0.25.2
+scipy==1.16.0
+six==1.17.0
+soupsieve==2.7
+stack-data==0.6.3
+sympy==1.14.0
+tifffile==2025.6.11
+tinycss2==1.4.0
 torch==2.1.0
 torchvision==0.16.0
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+typing_extensions==4.14.1
+urllib3==2.5.0
+wcwidth==0.2.13
+webencodings==0.5.1
+Werkzeug==3.1.3
+yarg==0.1.9
